recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:8: error: not found: value list
      return list.head;
             ^