recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
  
  def nth_helper(l:List[Int], n:Int, rang:Int): Int = {
  
  	if(rang == n){
      
      return list.head;
      
    } else{
      
      return nth_helper(l.tail, n, rang+1);
      
    }
    
	}
  
  return nth_helper(l, n, 0);
  
}